fix: minor width alignments

--- a/src/Pages/Pages.css
+++ b/src/Pages/Pages.css
@@ -10,6 +10,7 @@
     min-height: 90vh;
     display: flex;
     align-items: flex-start;
+    margin: 0 auto;
     justify-content: center;
 }
 
@@ -36,10 +37,11 @@
     border-radius: 50%;
 }
 .login-box{
+    margin: auto;
     min-width: 35%;
     padding: 1rem;
     border-radius: 10px;
-    min-height: 250px;
+    min-height: 80%;
     border: 2px solid var(--accent);
 }
 
@@ -50,5 +52,9 @@
     }
     .bookmarks-main{
         max-width: 50vw;
+    }
+    .main-post-page{
+        max-width: 50vw;
+
     }
   }
